syntax = "proto3";
option java_multiple_files = true;
package com.codenotfound.grpc.helloworld;

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Greeting {
  string message = 1;
}

message RetornoLong{
  int64 arg1 = 1;
}

message RetornoString{
  string message1 = 1;
}

message ChamadaUm{
}


message ChamadaDois {
  int64 arg1 = 1;
}

message ChamadaTres {
  int64 arg1 = 1;
  int64 arg2 = 2;
  int64 arg3 = 3;
  int64 arg4 = 4;
  int64 arg5 = 5;
  int64 arg6 = 6;
  int64 arg7 = 7;
  int64 arg8 = 8;
}

message ChamadaQuatro {
  string message1 = 1;
}

message ChamadaCinco {
  string message1 = 1;
}

service HelloWorldService {
  rpc sayHello (Person) returns (Greeting);
  rpc callChamadaUm (ChamadaUm) returns (ChamadaUm);
  rpc callChamadaDois (ChamadaDois) returns (RetornoLong);
  rpc callChamadaTres (ChamadaTres) returns (RetornoLong);
  rpc callChamadaQuatro (ChamadaQuatro) returns (RetornoString);
}